--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -26,336 +26,23 @@
 <!-- Contenedor principal, engloba el tablon, widgets... [IMPORTANTE]-->
     <div class="container">
     <!-- Para el diseño de la rama develop, se cambia col-md-6 por col-md-12 -->
-      <div class="col-lg-12 col-md-12 col-sm-12">
-        <div class="user-card card">
-          <nav class="ventana-pin">
-            <a><i class="fa fa-times"></i></a>
-            <a><i class="fa fa-expand"></i></a>
-            <a><i class="fa fa-thumb-tack"></i></a>
-          </nav>
-          <div class="user-avatar">
-            {% if user_profile.profile.backImage and user_profile.profile.backImage|file_exists %}
-            <img src="{{user_profile.profile.backImage.url}}" class="user-bg">
-            {% else %}
-            <img src="{{STATIC_URL}}img/backgrounds/5.jpg" class="user-bg">
-            {% endif %}
-            <span class="fa fa-paw fa-lg" title="Acerca de {{ user_profile.username }}"></span>
-            <!--<input type="checkbox" id="button-menu"  />-->
-            {% if user.is_authenticated and user.username != user_profile.username and existFriendRequest == True %}  <!-- si es usuario esta visitando un perfil que no es el suyo -->
-            <!-- Cambiamos el icono "+" por "reloj" mientras esperamos que acepte la peticion -->
-            <script type="text/javascript">
-              $(window).load(function() {
-                  $('#addfriend').replaceWith('<span class="fa fa-clock-o" title="En proceso">'+' '+'</div>');
-              });
-            </script>
-            {% endif %}
-            <div class="caja">
-             <div class="item">
-                 <div class="user-pic">{% avatar user_profile class="user-pic" %}</div>
-          {% comment %}
-                 Eliminar si se decide quedar con django-avatar
-        {% if user_profile.profile.image and user_profile.profile.image|file_exists %}
-           <img src="{{user_profile.profile.image.url}}" class="user-pic">
-        {% else %}
-           <img src="{{STATIC_URL}}img/nuevo.png" class="user-pic">
-        {% endif %}
-    {% endcomment %}
-               <!--  <img src="{{STATIC_URL}}img/bola/2.jpg" class="user-pic">-->
-
-               <span class="informacion">
-                {% if user.is_authenticated and user.username == user_profile.username %} <!-- Si el usuario esta visitando su propio perfil -->
-                <span id="configurationOnProfile" class="fa fa-cog" title="Configuracion"></span>
-                <span onclick="location.href='/friends/{{ user.username }}'" id="conf" class="fa fa-users" title="Grupos"></span>
-                <span id="publish" class="fa fa-paper-plane" title="Escribir"></span>
-                {% elif not user.is_authenticated %} <!-- si es usuario anonimo -->
-                   <span id="addfriend" class="fa fa-plus" title="Agregar" onclick=AJAX_requestfriend('anonymous')></span>
-                   <span id="ilike_profile" class="fa fa-heart" title="¡Me gusta!" onclick=AJAX_likeprofile('anonymous')></span>
-                {% if privacity == 'A' or isFriend and privacity == 'OF' or user.username == user_profile.username or privacity == 'OFAF' and isFriend or isFollower and privacity == 'OFAF' %}
-                   <span id="publish" class="fa fa-paper-plane" title="Escribir"></span>
-                {% endif %}
-                {% else %} <!-- si es usuario esta visitando un perfil que no es el suyo -->
-                   <span id="addfriend" class="fa fa-plus" title="Agregar" onclick=AJAX_requestfriend('noabort')></span>
-                   <span id="ilike_profile" class="fa fa-heart" title="¡Me gusta!" onclick=AJAX_likeprofile('noabort')></span>
-                {% if privacity == 'A' or isFriend and privacity == 'OF' or user.username == user_profile.username or privacity == 'OFAF' and isFriend or isFollower and privacity == 'OFAF' %}
-                   <span id="publish" class="fa fa-paper-plane" title="Escribir"></span>
-                {% endif %}
-                {% endif %}
-               </span>
-              </div>
-            </div>
-          </div>
-
-          <!-- INFORMACION ADICIONAL DEL USUARIO -->
-                <div class="col-sm-6 col-md-5 col-lg-5">
-                  <div class="info-paw">
-                    <div class="info-nav">
-                      <div class="info-wrapper-pic">
-                          {% comment %} Eliminar si nos quedamos con django-avatar...
-                      {% if user_profile.profile.image and user_profile.profile.image|file_exists %}
-                         <img src="{{user_profile.profile.image.url}}" class="info-user-pic">
-                      {% else %}
-                         <img src="{{STATIC_URL}}img/nuevo.png" class="info-user-pic">
-                      {% endif %}
-                          {% endcomment %}
-                          <div class="info-user-pic">{% avatar user_profile 90 %}</div>
-                      </div>
-                    <h1 class="info-user-name">{{ user_profile.username }}</h1>
-                    <h3 class="info-user-name_last">{{user_profile.first_name}} {{user_profile.last_name}}</h3>
-                    <h4 class="info-user-ciudad"><i class="fa fa-map-marker"></i>Mi ciudad</h4>
-                        <div class="info-event">
-
-                        </div>
-                        <div class="info-groups">
-
-                        </div>
-                        <div class="info-trof">
-
-                        </div>
-                        <div class="info-relations">
-
-                        </div>
-                    </div>
-                </div>
-                </div>
-
-                <!-- Trofeos -->
-                  <div class="col-sm-12 col-md-12 col-lg-10 trofeos">
-                     <span id="close-trofeos" class="fa fa-close fa-2x"></span>
-                      <h3 class="trofeos-title">Logros de {{ user_profile.username }}</h3>
-                      <div class="col-lg-12 col-md-12 col-sm-12 wrapper-trofeos">
-                          <div class="col-sm-3 col-md-3 col-lg-1 trofeo-user">
-                          </div>
-                          <div class="col-sm-3 col-md-3 col-lg-1 trofeo-user">
-                          </div>
-                          <div class="col-sm-3 col-md-3 col-lg-1 trofeo-user">
-                          </div>
-
-                      </div>
-                  </div>
-                <!-- Grupos -->
-
-                  <div class="col-lg-10 col-md-12 col-sm-12 grupos">
-                     <span id="close-grupos" class="fa fa-close fa-2x"></span>
-                      <h3 class="grupos-title">Grupos de {{ user_profile.username }}</h3>
-                      <div class="col-lg-12 col-md-12 col-sm-12 wrapper-grupos">
-                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                              <i class="fa fa-users"> 50</i>
-                              <i class="fa fa-heart"> 12</i>
-                          </div>
-                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                              <i class="fa fa-users"> 50</i>
-                              <i class="fa fa-heart"> 12</i>
-                          </div>
-                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                              <i class="fa fa-users"> 50</i>
-                              <i class="fa fa-heart"> 12</i>
-                          </div>
-                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                              <i class="fa fa-users"> 50</i>
-                              <i class="fa fa-heart"> 12</i>
-                          </div>
-                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                              <i class="fa fa-users"> 50</i>
-                              <i class="fa fa-heart"> 12</i>
-                          </div>
-                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                              <i class="fa fa-users"> 50</i>
-                              <i class="fa fa-heart"> 12</i>
-                          </div>
-                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                              <i class="fa fa-users"> 50</i>
-                              <i class="fa fa-heart"> 12</i>
-                          </div>
-                      </div>
-
-                  </div>
-
-          <header>
-            <p>@{{ user_profile.username }}</p><p id="profileId" hidden>{{ user_profile.profile.id }}</p>
-            <div class="status">{{ user_profile.profile.status }}</div>
-          </header>
-          <ul class="stats">
-            <li>
-                <a href="/followers/{{ user_profile.username }}"><strong>{{ followers }}</strong><span>Seguidores</span></a>
-            </li>
-            <li>
-                <a id="likes"><strong>{{n_likes}}</strong><span value="me gusta" onclick="contador()">Me gusta</span></a>
-            </li>
-            <li>
-                <a class='inline' href="#inline_content"><strong>48</strong><span>Fotos</span></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <!-- PIN GRANDE 1 -->
-      <div class="col-lg-6 col-md-12 col-sm-12">
-        <div class="stock card">
-            <nav class="ventana-pin">
-              <a><i class="fa fa-times"></i></a>
-              <a><i class="fa fa-expand"></i></a>
-              <a><i class="fa fa-thumb-tack"></i></a>
-          </nav>
-                  <!-- Widget encuestas -->
-         <div class="wrapper">
-            <div class="widget-wr">
-               <div class="widget-wr-ans">
-              <img src="{{STATIC_URL}}img/2.jpg">
-              <span class="wr-tittle">¿Debería viajar aquí?</span>
-            </div>
-             <div class="widget-options">
-                <button type="submit" class="fa fa-heart widget-ok"></button>
-               <button type="submit" class="fa fa-times widget-no"></button>
-               <span class="widget-result">
-                 <i class="widget-result-no">56</i>
-                 <i class="widget-result-ok">44</i>
-               </span>
-            </div>
-          </div>
-        </div>
-        </div>
-      </div>
+        {% comment %} CARD USUARIO - FOTO PERFIL ETC...  {% endcomment %}
+      {% include "account/card-user.html" %}
+      {% comment %}
+      PIN ARRIBA IZQUIERDA
+      {% endcomment %}
+        {% include "account/pin-left-top.html" %}
     <!-- PIN PEQUEÑO - 2 -->
-   <div class="col-lg-6 col-md-12 col-sm-12">
-        <div class="stock card">
-            <nav class="ventana-pin">
-              <a><i class="fa fa-times"></i></a>
-              <a><i class="fa fa-expand"></i></a>
-              <a><i class="fa fa-thumb-tack"></i></a>
-          </nav>
-                  <!-- Widget encuestas -->
-         <div class="wrapper">
-            <div class="widget-wr">
-               <div class="widget-wr-ans">
-              <img src="{{STATIC_URL}}img/1.jpg">
-              <span class="wr-tittle">¿Debería viajar aquí?</span>
-            </div>
-             <div class="widget-options">
-                <button type="submit" class="fa fa-heart widget-ok"></button>
-               <button type="submit" class="fa fa-times widget-no"></button>
-               <span class="widget-result">
-                 <i class="widget-result-no">56</i>
-                 <i class="widget-result-ok">44</i>
-               </span>
-            </div>
-          </div>
-        </div>
-        </div>
-      </div>
+        {% comment %}
+        PIN ARRIBA DERECHA
+        {% endcomment %}
+        {% include "account/pin-right-top.html" %}
 
     </div>
-      <!-- Pin Grande -->
-      <div class="video-player card">
-        <div class="vbox">
-            <div class="user-video">
-                <button class="play-user-video"><span class="fa fa-play"></span></button>
-            </div>
-            <div class="user-video">
-                <button class="play-user-video"><span class="fa fa-play"></span></button>
-            </div>
-            <div class="user-video">
-                <button class="play-user-video"><span class="fa fa-play"></span></button>
-            </div>
-            <div class="user-video">
-                <button class="play-user-video"><span class="fa fa-play"></span></button>
-            </div>
-            <div class="user-video">
-                <button class="play-user-video"><span class="fa fa-play"></span></button>
-            </div>
-            <div class="user-video">
-                <button class="play-user-video"><span class="fa fa-play"></span></button>
-            </div>
-            <div class="user-video">
-                <button class="play-user-video"><span class="fa fa-play"></span></button>
-            </div>
-            <div class="user-video">
-                <button class="play-user-video"><span class="fa fa-play"></span></button>
-            </div>
-            </div>
-            <!--
-          <div class="thumbnail"></div>
-          <button class="play-btn"><span class="fa fa-play"></span></button>
-            -->
-        <ul class="unstyled controls table">
-          <li class="play">
-            <button><span class="fa fa-play"></span></button>
-          </li>
-          <li class="timeline">
-            <div class="progress-bar">
-              <div class="bar">
-                <div class="progress">
-                  <div class="value"></div>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="volume-ctl">
-            <ul class="unstyled table">
-              <li class="volume-btn">
-                <button><span class="fa fa-volume-up"></span></button>
-              </li>
-              <li class="volume-bar">
-                <div class="progress-bar">
-                  <div class="bar">
-                    <div class="value"></div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </li>
-          <li class="fullscreen">
-            <button><span class="fa fa-desktop"></span></button>
-          </li>
-        </ul>
-      </div>
-            <!--
-          <div class="thumbnail"></div>
-          <button class="play-btn"><span class="fa fa-play"></span></button>
-            -->
-        <ul class="unstyled controls table">
-          <li class="play">
-            <button><span class="fa fa-play"></span></button>
-          </li>
-          <li class="timeline">
-            <div class="progress-bar">
-              <div class="bar">
-                <div class="progress">
-                  <div class="value"></div>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="volume-ctl">
-            <ul class="unstyled table">
-              <li class="volume-btn">
-                <button><span class="fa fa-volume-up"></span></button>
-              </li>
-              <li class="volume-bar">
-                <div class="progress-bar">
-                  <div class="bar">
-                    <div class="value"></div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </li>
-          <li class="fullscreen">
-            <button><span class="fa fa-desktop"></span></button>
-          </li>
-        </ul>
+      {% comment %}
+        PIN ABAJO
+      {% endcomment %}
+    {% include "account/pin-bottom.html" %}
 
     <!-- Contenedor principal -->
     <div class="container">
@@ -390,6 +77,7 @@
             Incluimos el tab amigos
         {% endcomment %}
         {% include "account/tab-amigos.html" %}
+          {% comment %}
     <!-- <div class="col-lg-12 col-sm-12 col-md-12"> -->
         <!-- <div class="weather card"> -->
      <!-- <div class="widget-right-down">
@@ -429,67 +117,12 @@
 
           </div>
   </div> -->
+  {% endcomment %}
 <!-- This contains the hidden content for inline calls -->
-<div style='display:none'>
-      <div id='inline_content' style='padding:10px; background:#fff;'>
-        <section>
-  <fieldset class="controls">
-  <ul class="btn">
-    <li><button class="all">Todas</button></li>
-    <li>
-        <select>
-      <option value="choose" selected="selected">Choose...</option>
-      <option value="rec">Recientes</option>
-      <option value="+">Mas Likes</option>
-      <option value="+m">Mas comentadas</option>
-        </select>
-    </li>
-    <li>
-        <select>
-      <option value="choose" selected="selected">Year...</option>
-      <option value="rec">2015</option>
-      <option value="+">2016</option>
-      <option value="+m">2017</option></select>
-    </li>
-  </ul>
-  <ul class="layout">
-    <li><button class="fontawesome-reorder"></button></li>
-    <li><button class="fontawesome-table"></button></li>
-</ul>
-          </fieldset>
-  <ul>
-    <li><div class="photo">
-      <span class="text">
-        <p href="#">Vacaciones en Tenerife.</p>
-        <i class="fontawesome-heart"> 1.031</i>
-        <a class="fontawesome-comment"> 432</a>
-      </span><img src="{{STATIC_URL}}img/1.jpg" alt="Photo">
-   </div></li>
-  <li><div class="photo"><span class="text">
-        <p>Vacaciones en Tenerife.</p>
-        <i class="fontawesome-heart"> 1.031</i>
-        <a class="fontawesome-comment"> 432</a>
-      </span></span><img src="{{STATIC_URL}}img/1.jpg" alt="Photo"></div></li>
-    <li><div class="photo"><span class="text">
-        <p href="#">Vacaciones en Tenerife.</p>
-        <i class="fontawesome-heart"> 1.031</i>
-        <a class="fontawesome-comment"> 432</a>
-      </span><img src="{{STATIC_URL}}img/1.jpg" alt="Photo"></div></li>
-    <li><div class="photo"><span class="text">
-        <p href="#">Vacaciones en Tenerife.</p>
-        <i class="fontawesome-heart"> 1.031</i>
-        <a class="fontawesome-comment"> 432</a>
-      </span><img src="{{STATIC_URL}}img/1.jpg" alt="Photo"></div></li>
-    <li><div class="photo"><span class="text">
-        <p href="#">Vacaciones en Tenerife.</p>
-        <i class="fontawesome-heart"> 1.031</i>
-        <a class="fontawesome-comment"> 432</a>
-      </span><img src="{{STATIC_URL}}img/1.jpg" alt="Photo"></div></li>
-  </ul>
-</section>
-
-      </div>
-</div>
+          {% comment %}
+          GALERIA DE IMÁGENES DEL PERFIL
+          {% endcomment %}
+{% include "account/profile-gallery.html" %}
 
 <!-- IGNORAR, SOLO MUESTRA OBJETOS AL HACER SCROLL -->
     <script>
