--- a/skyfolk/templates/account/search-avanzed.html
+++ b/skyfolk/templates/account/search-avanzed.html
@@ -8,58 +8,75 @@
 
 
 {% block content %}
-
 <div class="container">
-    <div class="col-lg-12 col-md-10 col-sm-12">
-        <div class="col-lg-12 col-md-12 col-sm-12 avanzed-title">
-            <h3>Búsqueda avanzada</h3>
+    <div class="row">
+        <div class="row">
+            <div class="col s12">
+                <div class="card-panel grey lighten-5">
+                    <h1 class="center-align">Búsqueda avanzada</h1>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 wrapper-avanzed">
-            <fieldset class="col-lg-12 col-md-12 col-sm-12 wrapper-content">
-                <legend class="col-lg-8 col-md-12 col-sm-12 content-title">
-                    Contenido
-                </legend>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Todas estas palabras </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Palabra o frase exacta </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Alguna de estas palabras </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Ninguna de estas palabras </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Estas etiquetas </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Esta expresión regular </div>
-            </fieldset>
-            <div class="col-lg-12 col-md-12 col-sm-12 separator"></div>
-            <fieldset class="col-lg-12 col-md-12 col-sm-12 wrapper-accounts">
-                <legend class="col-lg-8 col-md-12 col-sm-12 content-title">
-                    Cuentas
-                </legend>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">De esta cuenta </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Hacia esta cuenta </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Mencionando estas cuentas </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Tipo de contenido (sensible/normal) </div>
-            </fieldset>
-            <div class="col-lg-12 col-md-12 col-sm-12 separator"></div>
-            <fieldset class="col-lg-12 col-md-12 col-sm-12 wrapper-locations">
-                <legend class="col-lg-8 col-md-12 col-sm-12 content-title">
-                    Lugares
-                </legend>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">En este lugar </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Cerca de este lugar </div>
-            </fieldset>
-            <div class="col-lg-12 col-md-12 col-sm-12 separator"></div>
-            <fieldset class="col-lg-12 col-md-12 col-sm-12 wrapper-dates">
-                <legend class="col-lg-8 col-md-12 col-sm-12 content-title">
-                    Fechas
-                </legend>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Esta fecha </div>
-            </fieldset>
-            <div class="col-lg-12 col-md-12 col-sm-12 separator"></div>
-            <fieldset class="col-lg-12 col-md-12 col-sm-12 wrapper-other">
-                <legend class="col-lg-8 col-md-12 col-sm-12 content-title">
-                    Otros
-                </legend>
-                <div class="col-lg-4 col-md-12 col-sm-12 field-txt">Seleccionar (Positivo/Negativo/Citas/Respuestas/Compartido) </div>
-            </fieldset>
+        <div class="row">
+            <div class="row">
+                <h4 class="left-align">Contenido</h4>
+            </div>
+        <div class="col s12">
+            <form action="" method="post">{% csrf_token %} 
+                <div class="row">
+                    {{ form.all_words.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">list</i>
+                        {{ form.all_words }}
+                        <label for="id_all_words">{{ form.all_words.help_text }}</label>
+                    </div>
+                </div>
+                <div class="row">
+                    {{ form.word_or_exactly_word.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">label</i>
+                        {{ form.word_or_exactly_word }}
+                        <label for="id_all_words">{{ form.word_or_exactly_word.help_text }}</label>
+                    </div>
+                </div>
+                <div class="row">
+                    {{ form.some_words.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">filter_list</i>
+                        {{ form.some_words }}
+                        <label for="id_all_words">{{ form.some_words.help_text }}</label>
+                    </div>
+                </div>
+                <div class="row">
+                    {{ form.none_words.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">not_interested</i>
+                        {{ form.none_words }}
+                        <label for="id_all_words">{{ form.none_words.help_text }}</label>
+                    </div>
+                </div>
+                <div class="row">
+                    {{ form.hashtags.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">label</i>
+                        {{ form.hashtags }}
+                        <label for="id_all_words">{{ form.hashtags.help_text }}</label>
+                    </div>
+                </div>
+                <div class="row">
+                    {{ form.regex_string.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">settings</i>
+                        {{ form.regex_string }}
+                        <label for="id_all_words">{{ form.regex_string.help_text }}</label>
+                    </div>
+                </div>
+                <button class="waves-effect waves-light btn right" type="submit"><i class="material-icons left">search</i>Buscar</button>
+            </form>
         </div>
     </div>
+    </div>
+</div>
     <script async src="{{STATIC_URL}}js/search.js"></script>
 {% endblock %}
 </div>
