--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -13,39 +13,11 @@
         <div class="row">
             <div class="col l12 m12 s12 container-gallery">
               <a id="btn-upload-photo" class="btn-floating btn-large waves-effect waves-light blue darken-1"><i class="material-icons">add</i></a>
-                {% if object_list %}
-                    <div class="row">
-                    {% for photo in object_list %}
-                        <div class="col l2 m12 s12 image-div">
-                            <div class="container-image">
-                                <div class="principal-content">
-                                    {% if photo.tags.all %}
-                                        <div class="tags-content">
-                                        <form method="post" action="{% url "photologue:collection-list" photo.pk photo.owner %}">{% csrf_token %}
-                                            {% for tag in photo.tags.all %}
-                                                <blockquote>{{ tag.name }}</blockquote>
-                                            {% endfor %}
-                                        <input data-id="{{ photo.pk }}" type="submit" hidden>
-                                        </form>
-                                        </div>
-                                    {% endif %}
-                                    <img src="{{ photo.image.url }}" alt="{{ photo.title }}" title="{{ photo.title }}" onclick="location.href='{{ photo.get_absolute_url }}'">
-                                </div>
-                                <div class="col s12 legend-content">
-                                    <div class="legend-user-image">
-                                        {% avatar photo.owner.username %}
-                                    </div>
-                                    <div class="col l8 m8 s8 legend-user-data">
-                                        <a href="/profile/{{ photo.owner.username }}">@{{ photo.owner.username }}</a>
-                                        <i class="photo-title truncate">{{ photo.title }}</i>
-                                        <i class="truncate photo-date"><i class="fa fa-clock-o" aria-hidden="true"></i> {{ photo.date_added|naturaltime }}</i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                    </div>
-                {% endif %}
+              {% if object_list %}
+              <div class="row">
+                  {% include 'photologue/photo_gallery_page.html' %} 
+              </div>
+              {% endif %}
             </div> <!-- end container-gallery -->
         </div>
     <div class="upload_form" id="upload_photo">
@@ -175,5 +147,15 @@
         </div>
     </div>
 </div> <!-- end wrapper -->
+{% block js-gallery %}
+    {{ block.super }}
     <script async src="{{STATIC_URL}}js/photo_gallery.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}el-pagination/js/el-pagination.js"></script>
+    <script>
+        $.endlessPaginate({
+            paginateOnScroll: true,
+            paginateOnScrollMargin: 20
+        });
+    </script>
+{% endblock %}
 {% endblock %}
